client/styelsheets/style.less
/**
 * ----------------------------------------------------------------------------
 * Application styles
 * ----------------------------------------------------------------------------
 */
@import "_colors.import.less";
@import "_sizes.import.less";
@import "_fonts.import.less";

body {
  color: #e5e5e5;
  margin: 0;
  padding: 0;
  font-family: 'proximaNova', sans-serif;
  overflow: hidden;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

// Don't show the cursor on kiosks
body.kiosk-mode {
  cursor: none;
}

/**
 * ----------------------------------------------------------------------------
 * Text
 * ----------------------------------------------------------------------------
 */
h3 {
  letter-spacing: .5px;
}

/**
 * ----------------------------------------------------------------------------
 * Places
 * ----------------------------------------------------------------------------
 */

.place-label {
  position: absolute;
  // Starting point for animation
  opacity: 0;
}

.place-label-background {
  position: relative;
  border: 6px solid #062926;
  font-size: 30px;
  color: #FFF;
  font-family: national-bold, sans-serif;
  text-align: center;
  box-shadow: 0 4px 10px 3px rgba(0,0,0,0.45);
  border-radius: 50%;
  animation: animatedBackground 40s linear infinite;
  background: #FFF repeat-x center;
  background-size: 600px;
}

.place-label-text {
  position: absolute;
  text-align: center;
  bottom: 15px;
  margin-left: 0;
  margin-right: 0;
  left: 0;
  right: 0;
  // Starting point for animation
  opacity: 0;
  color: #062926;
  background: url('images/ricepaper.png');
  padding: 6px;
  box-shadow: 0 4px 10px 3px rgba(0,0,0,0.45);
}

// Custom text styles to get the copy to stay on one line
#lock-and-dam-1 .place-label-text,
#bohemian-flats .place-label-text {
  width: 110%;
  margin-left: -5%;
}

#saint-anthony-falls .place-label-text{
  width: 130%;
  margin-left: -15%;
}

/**
 * ----------------------------------------------------------------------------
 * Detail view UI
 * ----------------------------------------------------------------------------
 */
.home-button {
  position: absolute;
  top: 970px;
  color: #000;
  text-align: left;
  font-size: 40px;
  font-family: 'national-medium', sans-serif;
  opacity: .4;
  background: #FFF;
  padding: 10px;
  box-shadow: 0 4px 20px #222222;
}

/**
 * ----------------------------------------------------------------------------
 * Sidebar
 * ----------------------------------------------------------------------------
 */
@sidebar-padding: 35px;

#map-sidebar-background,
#map-sidebar {
  position: absolute;
  top: 0;
  right: 0;
  height: 1080px;
  box-shadow: 6px 6px 20px #222222;
  color: @tan;
}

#map-sidebar-background {
  background-color: rgb(35, 61, 83);
  opacity: .8;
  border-left: 2px solid @tan;
}

/**
 * ----------------------------------------------------------------------------
 * Sidebar text content
 * ----------------------------------------------------------------------------
 */
#map-sidebar h3 {
  font-family: 'national-medium', sans-serif;
  margin: 40px @sidebar-padding @sidebar-padding;
  font-size: 65px;
}

#map-sidebar p {
  font-family: 'national-thin', sans-serif;
  font-size: 32px;
  letter-spacing: .5px;
}

#map-sidebar .captured-sioux p {
  font-size: 25px;
}
#map-sidebar .snelling-training p {
  font-size: 24px;
}

#text-content {
  margin-left: @sidebar-padding;
}

/**
 * ----------------------------------------------------------------------------
 * Sidebar image content
 * ----------------------------------------------------------------------------
 */
#image-content {
  float: right;
  margin: 0 @sidebar-padding @sidebar-padding;
}

#highlighted-image {
  position: relative;
}

#highlighted-image {
  transform: rotate(2deg);
}

#highlighted-image img {
  box-shadow: 1px 2px 10px #000;
}

.image-caption {
  color: @drk-blue;
  font-size: 30px;
  font-family: 'national-thin-ital', sans-serif;
  width: 50%;
  background: @tan;
  box-shadow: 0 2px 10px #222222;
  position: absolute;
  bottom: -40px;
  right: 30px;
  transform: rotate(-2deg);
  padding: 15px;
}

.image-credit {
  font-size: 20px;
  font-family: 'national-book', sans-serif;
  text-align: right;
  opacity: .2;
  margin-top: 80px;
}

/**
 * ----------------------------------------------------------------------------
 * Sidebar dock
 * ----------------------------------------------------------------------------
 */
#dock {
  position: absolute;
}

#dock div {
  float: left;
}

#dock div img {
  //box-shadow: 10px 10px 49px 43px rgba(0,0,0,0.75);
  //box-shadow: 0px 8px 30px #111;
  box-shadow: 0px 10px 46px -3px rgba(0,0,0,0.75);
  //border: 3px solid #FFF;
}

/**
 * ----------------------------------------------------------------------------
 * Zoomed image
 * ----------------------------------------------------------------------------
 */
.image-zoom {
  color: #333;
  position: absolute;
  top: 30px;
  left: 30px;
  font-size: 50px;
}

.image-zoom i {
  opacity: .9;
  mix-blend-mode: overlay;
}

.zoom-image-container {
  z-index: 9999;
  position: absolute;
  top: 0px;
  left: 0px;
  width: 1920px;
  height: 1080px;
  text-align: center;
  background: rgba(0, 0, 0, .8);
}

.zoom-image-close-container {
  position: relative;
}

.zoom-image-container i {
  position: absolute;
  bottom: 10px;
  right: 10px;
  font-size: 60px;
  background: rgba(0, 0, 0, .6);
  padding: 20px;
}

/**
 * ----------------------------------------------------------------------------
 * Map container
 * ----------------------------------------------------------------------------
 */
.container {
  width: @screen-width;
  height: @screen-height;
  margin: 0;
  padding: 0;
}

/**
 * ----------------------------------------------------------------------------
 * Map styles
 * ----------------------------------------------------------------------------
 */
.map-line,
.map-circle {
  fill: white;
}

.map-line {
  stroke: #062926;
  stroke-width: 4;
}

.map-box {
  fill: white;
  stroke: black;
  stroke-width: 5;
}

/**
 * ----------------------------------------------------------------------------
 * Map styles - Dev. Used when placing the map projection
 * ----------------------------------------------------------------------------
 */
.states {
  fill: none;
  stroke: purple;
  stroke-width: 5;
}

.counties {
  fill: none;
  stroke: purple;
  stroke-width: .5;
}

.dev-map-details {
  display: none;
  position: absolute;
  top: 200px;
  right: 50px;
  font-size: 20px;
  background: white;
  color: @drk-blue;
  margin: 20px;
  padding: 0 20px 20px 20px;
  text-align: center;
}

.dev-map-details input {
  font-size: 30px;
  padding: 20px;
  margin: 20px;
  background: #DDD;
}

/**
 * ----------------------------------------------------------------------------
 * Screensaver
 * ----------------------------------------------------------------------------
 */
#screensaver {
  width: @screen-width;
  max-width: @screen-width;
  height: @screen-height;
  padding: 0;
  background: white;
  z-index: 999;
  position: absolute;
  top: 0;
  left: 0;
  display: none;
}

